# telegram-weather-bot-pub

./: .bandit  .coverage  .dockerignore  .env.deploy.example  .env.dev.example  .env.prod.example  .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONFIG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  app.py  coverage.xml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: pull_request_template.md
data/: storage_example.json  weather_api_quota_example.json
examples/: demo_i18n.py
locales/: de.json  en.json  ru.json
tests/: conftest.py  test_admin_commands.py  test_architecture.py  test_backup.py  test_block_notification.py  test_command_module_configuration.py  test_commands.py  test_container_setup.py  test_decorators.py  test_edge_cases.py  test_end_to_end.py  test_events.py  test_fixtures.py  test_formatter.py  test_formatter_multilang.py  test_i18n.py  test_integration.py  test_integration_simple.py  test_integration_user_flows.py  test_interactive_flows.py  test_keyboard_caching.py  test_keyboards.py  test_language_handler.py  test_logging_redaction.py  test_message_handlers.py  test_module_loader.py  test_multilang.py  test_multilang_complete.py  test_new_i18n_keys.py  test_performance.json  test_performance.py  test_quota_notifications.py  test_release_metadata.py  test_scheduler_dst_and_timezone_errors.py  test_scheduler_retry.py  test_spam_notification_integration.py  test_spam_protection.py  test_subscription_timezone.py  test_text_normalization.py  (+6 more)
(+72 files in other folders)
