[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.git
  | \.venv
  | __pycache__
  | \.pytest_cache
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["*/.venv/*", "*/__pycache__/*"]
known_first_party = ["weatherbot"]
known_third_party = ["telegram", "httpx", "pytest", "babel"]

[tool.pytest.ini_options]
markers = [
    "asyncio: mark test as async",
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--disable-warnings",
    "-ra",
]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"

# Packaging / interpreter constraints
[project]
name = "telegram-weather-bot-pub"
version = "3.1.3"
description = "Asynchronous multi-language Telegram weather bot"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
